# rhapp

./: .dockerignore  .gitignore  .gitmodules  .replit  DEPLOYMENT.md  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  prod-deploy.sh  prod-down.sh  prod-up.sh  pyproject.toml  requirements.txt
.github/: pull_request_template.md
backend/: .gitignore  .replit  AuthFunction.py  Dockerfile.dev  Dockerfile.prod  EmailService.py  LICENSE  README.md  event_handling.py  facilities.py  main.py  requirements.txt  sample.txt  testpy.py
backend/Authentication/: AuthenticationAPI.py  EmailService.py
backend/CrowdAnalyser/: CrowdAPI.py
backend/FacilityBooking/: FacilitiesAPI.py
backend/GymFeatures/: GymAPI.py  defaultLocation.py
backend/Laundry/: LaundryAPI.py
backend/S3/: README.md  app.py
backend/Scheduling/: SchedulingAPI.py
backend/Social/: SocialAPI.py
backend/SuperPage/: SuperpageAPI.py
backend/Supper/: SupperAPI.py
backend/authentication/: auth.py
backend/dataImporter/: dataImporter.py  sampleInput.csv  sampleOutput.csv
backend/facilityBooking/: facilities.py
backend/laundry/: laundry.py
backend/rhapp_aws_s3-main/: app.py
backend/scheduling/: event_handling.py
backend/social/: main.py
crowd/: package-lock.json  package.json  server.js
frontend/: .babelrc  .eslintrc.js  .prettierrc.js  manifest.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
scripts/: deploy-down.sh  deploy-up.sh  deploy-update.sh  dev-deploy.sh  generate-logs.sh  prod-deploy.sh  prod-down.sh  prod-up.sh
(+447 files in other folders)
