[tool.poetry]
name = "rhapp-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pymongo = "^3.11.2"
flask = "^1.1.2"
bson = "^0.5.10"
dnspython = "^2.0.0"
flask-cors = "^3.0.10"
pyjwt = "^2.0.1"
jwt = "^1.2.0"
gevent = "^21.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
