[tool.poetry]
name = "rhapp-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pymongo = "^3.11.2"
flask = "^1.1.2"
dnspython = "^2.0.0"
flask-cors = "^3.0.10"
gevent = "^21.1.2"
db = "^0.1.1"
apscheduler = "^3.7.0"
Flask-Mail = "^0.9.1"
PyJWT = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
